Revision history for Perl extension Archive-Zip

        - RT#75197

1.31_04 Fri 14 Oct 2011 - Alan Haggai Alavi
	- Updated Perl dependency to 5.006 to reflect implicit dependencies
	  in the code exposed by Perl::MinimumVersion xt test (ADAMK)
	- Fixes: #68446: Set compressed size and uncompressed size of an entry to 0
	  if either of them is 0 (HAGGAI)
	- Added $VERSION to crc32 (ADAMK)

1.31_03 Thu 30 Jun 2011 - H.Merijn Brand
	- Add decryption support

1.31_02 Wed 9 Mar 2011 - Adam Kennedy
	- More fixes by HAGGAI, which he still doesn't detail in Changes

1.31_01 Fri  5 Mar 2010 - Adam Kennedy
	- Various fixes by HAGGAI, which he has not yet provided details on:
	- Experimental Unicode in file/dir names

1.30 Tue 30 Jun 2009 - Adam Kennedy
	- Fixed a bad use of Cwd::getcwd

1.29 Mon 29 Jun 2009 - Adam Kennedy
	- Changed _asLocalName back to rel2abs, but this time using
	  Cwd::getcwd as the base path instead of Cwd::cwd.
	  This hopefully resolved #47223 (ADAMK)

1.28 Tue 16 Jun 2009 - Adam Kennedy
	- Changing to production version for release
	- Reverted to revision 4736 and converted `External File Attribute'
	  values for symbolic links to hexadecimal (HAGGAI)
	- Fixed: #15026: AddTree does not include files with german
	  umlauts in the filename (HAGGAI)
	- Switched from Compress::Zlib to Compress::Raw::Zlib (AGRUNDMA)
	- Moved crc32 from bin to script (ADAMK)

1.27_01 Tue 16 Dec 2008 - Adam Kennedy
	- Makefile.PL will create a better META.yml
	- This is a test release for various improvements provided by
	  Alan Haggai. The entire release is credited to his grant work.
	- Fixed #25726: extractMembers failing across fork on Windows.
	- Fixed #12493: Can't add new files to archives which contain
	  files named 0,1,2,3,4,5,6,7,8,9 with no extension.
	  (Files named "0" are not archived)
	- Fixed #22933: Properly extract symbolic links.
	- Fixed #20246: Ability to assign a compression level to addTree
	  calls.